--- a/src/styles/variables/global.scss
+++ b/src/styles/variables/global.scss
@@ -3,7 +3,7 @@
 
     --font-size-m: 16px;
     --font-line-m: 24px;
-    --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main)
+    --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
 
     --font-size-l: 24px;
     --font-line-l: 32px;
