add feature slices design

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
-@import 'reset.scss';
-@import 'variables/global.scss';
-@import 'theme/light.scss';
-@import 'theme/dark.scss';
+@import 'reset';
+@import 'variables/global';
+@import 'theme/light';
+@import 'theme/dark';
 
 
 .app{
