--- a/src/app/styles/theme/dark.scss
+++ b/src/app/styles/theme/dark.scss
@@ -1,6 +1,10 @@
 .app.dark{
     --bg-color: #090949;
+    --bg-inverted-color: #e8e8ea;
+
 
     --primary-color: #049604;
     --secondary-color:  #04ff04;
+    --primary-inverted-color: #041c65;
+    --secondary-inverted-color:  #0452ff;
 }
