--- a/src/app/styles/theme/light.scss
+++ b/src/app/styles/theme/light.scss
@@ -1,6 +1,10 @@
 .app.light{
     --bg-color: #e8e8ea;
+    --bg-inverted-color: #090949;
+
 
     --primary-color: #041c65;
     --secondary-color:  #0449e8;
+    --primary-inverted-color: #049604;
+    --secondary-inverted-color:  #04ff04;
 }
