add button ui-kit and theme switcher

--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -4,7 +4,7 @@
   background: var(--bg-inverted-color);
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: space-between;
   gap: 15px;
   padding: 20px;
 }
