--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -12,3 +12,14 @@
 
     min-height: 100vh;
 }
+
+.content-page{
+    display: flex;
+    min-height: calc(100vh - var(--navbar-height));
+    width: 100%;
+}
+
+.page-wrapper{
+    flex-grow: 1;
+    padding: 20px;
+}
