--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,10 +1,10 @@
 .Button{
   cursor: pointer;
+  color: var(--primary-inverted-color);
 }
 
 .clear{
   padding: 0;
-  margin: 0;
   border: none;
   background: none;
   outline: none;
