--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,25 +1,22 @@
-@import 'reset';
-@import 'variables/global';
-@import 'theme/light';
-@import 'theme/dark';
+@import "reset";
+@import "variables/global";
+@import "theme/light";
+@import "theme/dark";
 
-
-.app{
+.app {
     font: var(--font-m);
-
     background: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
 }
 
-.content-page{
+.content-page {
     display: flex;
     min-height: calc(100vh - var(--navbar-height));
     width: 100%;
 }
 
-.page-wrapper{
+.page-wrapper {
     flex-grow: 1;
     padding: 20px;
 }
