добавил storybook компоненты

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,5 +1,5 @@
 .Sidebar {
-    min-height: calc(100% - var(--navbar-height));
+    min-height: inherit;
     width: var(--sidebar-width);
     background: var(--bg-inverted-color);
     position: relative;
