--- a/src/shared/ui/Loader/ui/LoaderShare.module.scss
+++ b/src/shared/ui/Loader/ui/LoaderShare.module.scss
@@ -15,14 +15,14 @@
     border: 4px solid currentcolor;
     opacity: 1;
     border-radius: 50%;
-    animation: loaderRipple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+    animation: loader-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 
 .loaderRipple div:nth-child(2) {
     animation-delay: -0.5s;
 }
 
-@keyframes loaderRipple {
+@keyframes loader-ripple {
     0% {
         top: 36px;
         left: 36px;
