--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -6,19 +6,64 @@
     transition: width 500ms;
 }
 
-.collapsed {
-    width: var(--sidebar-width-collapsed);
-    transition: width 500ms;
-}
-
 .Switcher {
     position: absolute;
     bottom: 20px;
     display: flex;
     justify-content: center;
     width: 100%;
+    flex-direction: row;
 }
 
 .lang {
     margin-left: 20px;
+}
+
+.link {
+    margin-left: 10px;
+    opacity: 100;
+    transition: 0.2s opacity ease-in-out;
+}
+
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+    transition: width 500ms;
+
+    .Switcher {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .lang {
+        margin-left: 00;
+    }
+
+    .link {
+        opacity: 0;
+        transition: 0.2s opacity;
+    }
+}
+
+.items {
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+}
+
+.item {
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.icon {
+    fill: var(--primary-inverted-color);
+}
+
+.collapseBtn {
+    position: absolute;
+    right: -32px;
+    bottom: 32px;
 }
